Add ability to approve draft orders as part of new event.